feat: basic sign in and sign up functional

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="password">Password</string>
     <string name="icon_password">password icon</string>
 
+    <string name="icon_go_back">Go back</string>
+
 </resources>
