feat: chat bubble

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,7 @@
     <string name="friends">Friends</string>
 
     <string name="chats">Chats</string>
+    <string name="message">Message</string>
+    <string name="send_message">Send the message</string>
 
 </resources>
