--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
 
     <string name="chats">Chats</string>
     <string name="message">Message</string>
+    <string name="messages">Messages</string>
     <string name="send_message">Send the message</string>
 
 </resources>
