--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     
     <string name="sign_up">Sign Up</string>
     <string name="register">Register</string>
-    <string name="create_account">Create your new account</string>
+    <string name="create_account">Create an account</string>
     <string name="sign_up_username">Create your username</string>
     <string name="sign_up_password">Create password</string>
     <string name="sign_up_confirm_password">Confirm your password</string>
