fix: change user details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="invite_friend">Invite a friend</string>
     <string name="edit_account">Edit Profile details</string>
 
-    <string name="search_user">Search close users</string>
+    <string name="search_user">Search Close users</string>
     <string name="no_user_found">No User Found</string>
 
     <string name="confirm_request">Confirm Friend Request</string>
